<resources>
    <string name="app_name">QXM</string>
    <string name="version_code">1.0.20</string>
    <string name="version_variant">alpha</string>
    <string name="facebook_app_id">993330330873647</string>
    <string name="fb_login_protocol_scheme">fb993330330873647</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">Upload</string>
    <string name="before_you_get_started">Before you get started\nLet\'s make sure you Look Better</string>
    <string name="hi_Test_Name">Hi, Test Name</string>
    <string name="upload_a_profile_picture_n_optional">Upload a profile picture (optional)</string>
    <string name="forget_your_password">Forget Your Password?</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="sign_up">Sign Up</string>
    <string name="dummy_email">example@email.com</string>
    <string name="dummy_password">*******</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="btn_continue">SIGN UP</string>
    <string name="or_sign_up_with">Or Sign up with</string>
    <string name="continue_next">CONTINUE</string>
    <string name="login">LOGIN</string>
    <string name="google_login_client_id">48109182036-9lkp933clvsg69klfbmat8l8lcppe60l.apps.googleusercontent.com</string>
    <string name="nav_home">Home</string>
    <string name="nav_enroll">Enroll</string>
    <string name="nav_following">Following</string>
    <string name="nav_my_qxm">My Qxm</string>
    <string name="nav_create_qxm">Create</string>
    <string name="app_bar_item_search">Search</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="users_profile_image">Users\' profile image</string>
    <string name="notification_icon">Notification icon</string>
    <string name="drawer_toggle">Drawer toggle</string>
    <string name="search_icon">Search icon</string>
    <string name="my_qxm">My Qxm</string>
    <string name="following">Following</string>
    <string name="qxms">Qxms</string>
    <string name="details">Details</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="notification">Notification</string>
    <string name="evaluate_qxm">Evaluate Qxm</string>
    <string name="result">Result</string>
    <string name="activity_log">Activity Log</string>
    <string name="followers">Followers</string>
    <string name="groups">Groups</string>
    <string name="private_qxm">Private Qxm</string>
    <string name="my_enrollment">My Enrollment</string>
    <string name="user_full_name">Mridul Das</string>
    <string name="goto_profile">Profile</string>
    <string name="qxm_group">Qxm Group</string>
    <string name="settings">Settings</string>
    <string name="reportabug">Report a Bug</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="terms_amp_privacy_policy"><![CDATA[Terms &  Privacy Policy]]></string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="app_intro">Intro Tutorial</string>
    <string name="logout">Logout</string>
    <string name="sample_feed">A Qxm about Fish Finger Recipe</string>
    <string name="sample_time_in_day">2 days ago</string>
    <string name="sample_participants_number">420 Participants</string>
    <string name="edit_info">Edit Info</string>
    <string name="basic">Basic</string>
    <string name="location_text">You from</string>
    <string name="country_name">Country</string>
    <string name="country_name_value">Bangladesh</string>
    <string name="living_address">Address</string>
    <string name="living_address_value">26/4 Fazilchist,Subid Bazar,Sylhet</string>
    <string name="interest_name">Sports</string>
    <string name="social_link">facebook.com/frshafi</string>
    <string name="occupation_name">Teacher</string>
    <string name="instituite_fix_name">Institution</string>
    <string name="degree_fix_name">Degree</string>
    <string name="grade_fix_name">Grade</string>
    <string name="field_of_study_fix_name">Field of Study</string>
    <string name="passing_year_fix_name">Duration of Study</string>
    <string name="from">From</string>
    <string name="from_text">2005</string>
    <string name="to">To</string>
    <string name="to_text">2007</string>
    <string name="unfollow">unfollow</string>
    <string name="edit_website_fixed">New website link</string>
    <string name="choose_social_text">Choose Social</string>
    <string name="add_social_text">Add Link</string>
    <string name="social_address_text">frshafi49</string>
    <string name="basic_hint_info">Basic Hint Info</string>
    <string name="desc_fixed">Description</string>
    <string name="description_text">This is Fozle Rabbi Shafi. I live in Sylhet. This is Fozle Rabbi Shafi. I live in Sylhet. This is Fozle Rabbi Shafi. I live in Sylhet.This is Fozle Rabbi Shafi. I live in Sylhet.This is Fozle Rabbi Shafi. I live in Sylhet.This is Fozle Rabbi Shafi. I live in Sylhet.This is Fozle Rabbi Shafi. I live in Sylhet.vvvThis is Fozle Rabbi Shafi. I live in Sylhet.This is Fozle Rabbi Shafi. I live in Sylhet.</string>
    <string name="first_name_fixed">First name</string>
    <string name="middle_name_fixed">Middle name</string>
    <string name="last_name_fixed">Last name</string>
    <string name="full_name">Full Name</string>
    <string name="username_fixed">Username</string>
    <string name="email_fixed">Email</string>
    <string name="bio_fixed_name">Bio</string>
    <string name="website_address_text">www.shafinew.com</string>
    <string name="edit_social_fixed">New Facebbok Link</string>
    <string name="bio_text">I am a programmer and I love programming very much</string>
    <string name="contest">Contest</string>
    <string name="number">125</string>
    <string name="ignite">Ignite</string>
    <string name="ignited">Ignited</string>
    <string name="share">Share</string>
    <string name="shared">Shared</string>
    <string name="share_to_group">Share to group</string>
    <string name="share_with_others">Share with others</string>
    <string name="add_to_list">Add to list</string>
    <string name="save_as">Save as</string>
    <string name="participants"> Participants</string>
    <string name="participant"> Participant</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="toast_cannot_retrieve_selected_image">Can not retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Can not retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image</string>
    <string name="uploading">Uploading</string>
    <string name="uploaded">Uploaded</string>
    <string name="multiple_choice_option">Option 1</string>
    <string name="fill_the_blank_options">answer to question</string>
    <string name="add_question">Add Question</string>
    <string name="untitled_question_set_name">Untitled question set name</string>
    <string name="question_set_description">Question set description</string>
    <string name="untitled_question">Untitled question</string>
    <string name="multiple_choice_add_option">add option</string>
    <string name="write_your_question_and_insert_blank">Write your question and press insert blank to put a  blank</string>
    <string name="insert_blank">Insert Blank</string>
    <string name="answers">Answers</string>
    <string name="write_a_question">Write a question</string>
    <string name="character_limit">Character limit</string>
    <string name="required">Required</string>
    <string name="create_question">Create Question</string>
    <string name="points">Points</string>
    <string-array name="question_type_array">
        <item>Multiple Choice</item>
        <item>Fill in The Blank</item>
        <item>Short Answer</item>
    </string-array>
    <string name="category">Category:</string>
    <string name="this_qxm_is_for">This qxm is for:</string>
    <string name="add_code_or_csv_file">add code or csv file</string>
    <string name="answer_submission_deadline">Answer submission deadline</string>
    <string name="content_description_category_item">Category Item</string>
    <string name="philosophy">Philosophy</string>
    <string name="action_bar_title_qxm_settings">QXM Settings</string>
    <string name="title_qxm_category">Question Category</string>
    <string name="hint_qxm_category">Choose a category that suit best with this question</string>
    <string name="title_qxm_time">QXM Time</string>
    <string name="title_exam_time">Exam time:</string>
    <string name="dummy_exam_time">0 hours 00 minutes</string>
    <string name="title_qxm_privacy">Question Privacy</string>
    <string name="title_qxm_will_be_visible">Question will be visible</string>
    <string name="after_participation">After participation</string>
    <string name="before_participation">Before participation</string>
    <string name="title_qxm_start_schedule">Exam Start Schedule</string>
    <string name="instantly">Instantly</string>
    <string name="start_when_clicked_manual_start">Start when clicked/manual start</string>
    <string name="title_qxm_evaluation">QXM Evaluation</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="semi_automatic">Semi-automatic</string>
    <string name="title_qxm_expiration">Exam Expiration</string>
    <string name="negative_marking_for_multiple_choice_question">Negative Marking</string>
    <string name="negative_points_for_each_question">Negative points for each question</string>
    <string name="negative_mark_1">1.0</string>
    <string name="add_youtube_link">Add YouTube Link</string>
    <string name="choose_category">Choose Category</string>
    <string name="duplicate_item">Duplicate Item</string>
    <string name="remove">Remove</string>
    <string name="add_description">Add Description</string>
    <string name="add_hidden_description">Add Hidden Description</string>
    <string name="add_tags">Add Tags</string>
    <string name="delete">Delete</string>
    <string name="new_list">New List</string>
    <string name="list_title">Title</string>
    <string-array name="list_privacy">
        <item>Public</item>
        <item>Private</item>
    </string-array>
    <string name="copy_link">Copy Link</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="not_interested">Not interested</string>
    <string name="report">Report</string>
    <string name="qxm_removed">Qxm removed</string>
    <string name="undo">UNDO</string>
    <string name="tell_us_why">TELL US WHY</string>
    <string name="add_thumbnail">Add Thumbnail</string>
    <string name="participation">Participation</string>
    <string name="create_a_qxm">Create a Qxm</string>
    <string name="create_a_poll">Create a Poll</string>
    <string name="create_a_new_qxm_or_poll">Create a new Qxm or Poll</string>
    <string name="please_tap_a_button_inorder_to_create_a_qxm_or_poll">Please tap a button inorder to create a Qxm or Poll</string>
    <string name="or">or</string>
    <string name="others">Others</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>