<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/action_hide"
        android:orderInCategory="100"
        android:title="@string/not_interested"
        app:showAsAction="never" />

    <item
       android:id="@+id/action_share_to_group"
       android:orderInCategory="100"
       android:title="@string/share_to_group"
       app:showAsAction="never" />

   <item
       android:id="@+id/action_share_link"
       android:orderInCategory="100"
       android:title="@string/share_with_others"
       app:showAsAction="never" />

    <item
        android:id="@+id/action_add_to_list"
        android:orderInCategory="100"
        android:title="@string/add_to_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_report"
        android:orderInCategory="100"
        android:title="@string/report"
        app:showAsAction="never" />

</menu>
