<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_duplicate_item"
        android:orderInCategory="100"
        android:title="@string/duplicate_item"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove_question"
        android:orderInCategory="100"
        android:title="@string/remove"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_description"
        android:orderInCategory="100"
        android:title="@string/add_description"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_hidden_description"
        android:orderInCategory="100"
        android:title="@string/add_hidden_description"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_tags"
        android:orderInCategory="100"
        android:title="@string/add_tags"
        app:showAsAction="never" />
</menu>
