<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_add_thumbnail"
        android:orderInCategory="100"
        android:title="@string/add_thumbnail"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_youtube_link"
        android:orderInCategory="100"
        android:title="@string/add_youtube_link"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_choose_category"
        android:orderInCategory="100"
        android:title="@string/choose_category"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_to_list"
        android:orderInCategory="100"
        android:title="@string/add_to_list"
        app:showAsAction="never" />

</menu>
