<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item
        android:id="@+id/action_not_interested"
        android:orderInCategory="100"
        android:title="@string/not_interested"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/action_share_to_group"
        android:orderInCategory="100"
        android:title="@string/share_to_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share_link"
        android:orderInCategory="100"
        android:title="@string/share_with_others"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_to_list"
        android:orderInCategory="100"
        android:title="@string/add_to_list"
        app:showAsAction="never" />

    <!--<item
        android:id="@+id/action_save_as"
        android:orderInCategory="100"
        android:title="@string/save_as"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/action_report_qxm"
        android:orderInCategory="100"
        android:title="@string/report"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never" />

</menu>
