<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="40dp">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/doneIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:srcCompat="@drawable/ic_check"
        android:layout_alignParentEnd="true"/>


    <androidx.appcompat.widget.AppCompatTextView

        android:id="@+id/tvGenderHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/gender"
        app:fontFamily="@font/roboto_light"
        android:layout_below="@+id/doneIV"/>

    <RadioGroup
        android:id="@+id/rgUserGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGenderHeading"
        android:layout_marginTop="@dimen/margin_small">

        <androidx.appcompat.widget.AppCompatRadioButton

            android:id="@+id/rbGenderMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/male"
            app:buttonTint="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatRadioButton

            android:id="@+id/rbGenderFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/female"
            app:buttonTint="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatRadioButton

            android:id="@+id/rbGenderOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/others"
            app:buttonTint="@color/colorPrimary" />
    </RadioGroup>

</RelativeLayout>